first-section add

--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects_2023</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>G3 Architects</h1>
+    <!-- Header section strat -->
+    <div class="first-section">
+        <header class="heading">
+            <h1>G3 Architects</h1>
+            <nav>
+                <ul>
+                    <li> <a href="">Home</a></li>
+                    <li> <a href="">About</a></li>
+                    <li> <a href="">Contact us</a></li>
+                    <li> <a href="">Login</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="first-banner-text">
+            <h1>Brand New <br>
+                Group of Architects 
+            </h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+            <img class="img-banner" src="images/banner.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
