--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+=<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,6 +29,23 @@
             <button class="btn-primary">Explore More</button>
             <img class="img-banner" src="images/banner.png" alt="">
         </div>
+    </div>
+    <div class="second-section">
+        <div class="team-img">
+            <img class="img-1" src="images/team1.png" alt="">
+            <img class="img-2" src="images/team2.png" alt=""><br>
+            <img class="img-3" src="images/team3.png" alt="">
+            <img class="img-4" src="images/team4.png" alt="">
+        </div>
+        <div>
+            <div class="second-banner-text">
+                <h1>Quick list of Our <br> Features 
+                </h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
