--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div>
             <div class="second-banner-text">
-                <h1>Quick list of Our <br> Features 
+                <h1><span class="second-banner-title"> Quick list</span> of Our<br> <span class="second-banner-title2">Features</span> 
                 </h1>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
