3rd section added

--- a/index.html
+++ b/index.html
@@ -47,5 +47,35 @@
         </div>
 
     </div>
+    <div class="third-section">
+        <div>
+            <div class="third-sec-title">
+                <h1 class="border-line"> Features you will <br> love & enjoy</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or <br> randomised words which don't look even</p>
+            </div>
+            <div class="feature-1">
+                <h2>Dexktop & Mobile Version</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-2">
+                <h2>Dexktop & Mobile Version</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-3">
+                <h2>Dexktop & Mobile Version</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-4">
+                <h2>Dexktop & Mobile Version</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div class="architect-img">
+            <img class="architect-1" src="images/architect.png" alt="">
+            <button class="btn-third-section">10+Year <br>
+                 Experience</button>
+        </div>
+
+    </div>
 </body>
 </html>
