fifth section & footer added

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
             </div>
             <div class="feature-2">
-                <h2>Dexktop & Mobile Version</h2>
+                <h2>Drag & Drop Builder</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
             </div>
             <div class="feature-3">
-                <h2>Dexktop & Mobile Version</h2>
+                <h2>Awesome Modern Design</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
             </div>
             <div class="feature-4">
-                <h2>Dexktop & Mobile Version</h2>
+                <h2>Super Easy to Edit</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
             </div>
         </div>
@@ -77,5 +77,52 @@
         </div>
 
     </div>
+    <!-- fourth-section -->
+    <div class="fourth-section-title">
+        <h1>Some Facts</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+    </div>
+    <div class="fourth-section">
+        <div class="fourth-section-icon-1">
+            <img src="images/icons/ribon.png" alt="">
+            <h2>54</h2>
+            <p>Awards Winnings</p>
+        </div>
+        <div class="fourth-section-icon-2">
+            <img src="images/icons/projects.png" alt="">
+            <h2>1458</h2>
+            <p>Project Finished</p>
+        </div>
+        <div class="fourth-section-icon-3">
+            <img src="images/icons/customers.png" alt="">
+            <h2>590</h2>
+            <p>Clients Worked</p>
+        </div>
+        <div class="fourth-section-icon-4">
+            <img src="images/icons/email.png" alt="">
+            <h2>22578</h2>
+            <p>Email Send</p>
+        </div>
+    </div>
+    <!-- fifth-section-start -->
+    <div class="fifth-section">
+        <div class="fifth-section-title">
+            <h1>Our Sponspors</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+        </div>
+        <div class="fifth-section-sponsors">
+            <img class="fifth-sec-img-1" src="images/sponsors/spotify.png" alt="">
+            <img class="fifth-sec-img-2" src="images/sponsors/amazon.png" alt="">
+            <img class="fifth-sec-img-3" src="images/sponsors/google.png" alt="">
+            <img class="fifth-sec-img-4" src="images/sponsors/telerama.png" alt="">
+            <img class="fifth-sec-img-5" src="images/sponsors/figma.png" alt="">
+        </div>
+
+    </div>
+    <footer>
+        <div class="footer">
+            <h3>All rights reserved copyright@2023 startup landing page design</h3>
+        </div>
+    </footer>
 </body>
 </html>
