--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects_2023</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,9 +30,12 @@
             </h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
-            <img class="img-banner" src="images/banner.png" alt="">
+            <div>
+                <img class="img-banner" src="images/banner.png" alt="">
+            </div>
         </div>
     </div>
+    <!-- second-section-start -->
     <div class="second-section">
         <div class="team-img">
             <img class="img-1" src="images/team1.png" alt="">
@@ -78,11 +84,12 @@
 
     </div>
     <!-- fourth-section -->
+   <div class="fourth-section">
     <div class="fourth-section-title">
         <h1>Some Facts</h1>
         <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
     </div>
-    <div class="fourth-section">
+    <div class="fourth-section-icon">
         <div class="fourth-section-icon-1">
             <img src="images/icons/ribon.png" alt="">
             <h2>54</h2>
@@ -104,6 +111,7 @@
             <p>Email Send</p>
         </div>
     </div>
+   </div>
     <!-- fifth-section-start -->
     <div class="fifth-section">
         <div class="fifth-section-title">
