--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Header section strat -->
-    <div class="first-section">
+    <div class="container">
         <header class="heading">
             <h1>G3 Architects</h1>
             <nav>
